--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -133,7 +133,8 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
         Michael Pippig\\
         Technische Universit\"at Chemnitz\\
         Faculty of Mathematics\\
-        09107 Chemnitz, Germany
+        09107 Chemnitz, Germany\\
+        \href{mailto:michael.pippig@mathematik.tu-chemnitz.de}{michael.pippig@mathematik.tu-chemnitz.de}
 
     \vspace*{3cm}
       Download \textbf{\Large P}arallel \textbf{\Large F}ast \textbf{\Large F}ourier \textbf{\Large T}ransform Software Library at \\
